--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     - name: Build
       run: npm run build
       env:
-        REACT_APP_APIKey: ${{secrets.REACT_APP_API_KEY}}
+        REACT_APP_API_KEY: ${{secrets.REACT_APP_API_KEY}}
 
 
     - name: Deploy
