--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         node-version: [18.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
-        
+
     steps:
     - uses: actions/checkout@v3
     - name: Use Node.js ${{ matrix.node-version }}
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: npm install
     - name: Build
-      run: npm run build
+      run: npm run-script build
       env:
         REACT_APP_API_KEY: ${{secrets.REACT_APP_API_KEY}}
 
