--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,6 +42,7 @@ jobs:
         user_name: 'github-actions[bot]'
         user_email: 'github-actions[bot]@users.noreply.github.com'
         github_token: ${{ secrets.ACTIONS_DEPLOY_ACCESS_TOKEN }}
+        REACT_APP_API_KEY: ${{secrets.REACT_APP_API_KEY}}
         repository: ${{ github.repository }}
 
     - name: Cache dependencies
