--- a/.github/workflows/cleanup-pr.yml
+++ b/.github/workflows/cleanup-pr.yml
@@ -13,7 +13,8 @@ jobs:
   delete:
     runs-on: ubuntu-latest
     steps:
-      - uses: renbrent/weather-app@v2
+      - name: Delete Deployment Environment
+      - uses: strumwolf/delete-deployment-environment@v2.2.3
         with:
           # ⚠️ The provided token needs permission for admin write:org
           token: ${{ secrets.DELETE_ENV }}
