--- a/.github/workflows/cleanup-pr.yml
+++ b/.github/workflows/cleanup-pr.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Delete Deployment Environment
-      - uses: strumwolf/delete-deployment-environment@v2.2.3
+        uses: strumwolf/delete-deployment-environment@v2.2.3
         with:
           # ⚠️ The provided token needs permission for admin write:org
           token: ${{ secrets.DELETE_ENV }}
